Scrollbar fix,  coursor: pointer,  skeleton

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,4 +1,6 @@
 .Sidebar {
+    position: sticky;
+    top: 0;
     display: flex;
     flex-direction: column;
     width: 360px;
