--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,6 +1,5 @@
 .About {
     width: 950px;
-    height: 100vh;
     font-size: 36px;
     padding-top: 50px;
     padding-left: 50px;
