--- a/src/components/OnePost.css
+++ b/src/components/OnePost.css
@@ -61,4 +61,5 @@
     border-radius: 3px;
     background-color: #FFFFFF;
     outline: none;
+    cursor: pointer;
 }
